completed crud opration on post
