# routes/post.route.js
@@ -1,10 +1,12 @@
 import { Router } from 'express';
 const router = Router();
-import { jwtAuth } from '../middlewares/jwtAuth.js';
-import {createPost, getAllPosts} from '../controllers/post.controller.js';
+import {createPost, getAllPosts, getSingalPost, updatePost, deletePost} from '../controllers/post.controller.js';
 
-router.post('/', jwtAuth, createPost);
+router.post('/create',createPost);
 router.get('/', getAllPosts);
+router.get('/:postId', getSingalPost);
+router.put('/:postId/update', updatePost);
+router.delete('/:postId/delete', deletePost);
 
 
 
